<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="85dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvPastelDeChoclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/PastelDeChoclo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvCazuela"
        android:layout_width="119dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/Cazuela"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVentaPastelDeChoclo" />

    <TextView
        android:id="@+id/tvTotalPedido"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="500dp"
        android:text="@string/TotalPedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCant1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Cant1"
        app:layout_constraintStart_toStartOf="@+id/tvPastelDeChoclo"
        app:layout_constraintTop_toBottomOf="@+id/tvPastelDeChoclo" />

    <TextView
        android:id="@+id/tvCant2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Cant2"
        app:layout_constraintStart_toStartOf="@+id/tvCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <TextView
        android:id="@+id/tvTotalVenta"
        android:layout_width="102dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/TotalVenta"
        app:layout_constraintStart_toStartOf="@+id/switchPropina"
        app:layout_constraintTop_toBottomOf="@+id/switchPropina" />

    <Switch
        android:id="@+id/switchPropina"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:minHeight="48dp"
        android:text="Propina"
        app:layout_constraintStart_toStartOf="@+id/tvTotalPedido"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalPedido" />

    <EditText
        android:id="@+id/etPropina"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="116dp"
        android:ems="10"
        android:hint="Propina"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/switchPropina"
        app:layout_constraintTop_toTopOf="@+id/switchPropina" />

    <EditText
        android:id="@+id/etTotalPedido"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Total Pedido"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvTotalPedido"
        app:layout_constraintTop_toTopOf="@+id/tvTotalPedido" />

    <EditText
        android:id="@+id/etTotalVenta"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Total Venta"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etPropina"
        app:layout_constraintTop_toTopOf="@+id/tvTotalVenta" />

    <EditText
        android:id="@+id/etCant1"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="6"
        android:hint="Cant1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvCant1"
        app:layout_constraintTop_toBottomOf="@+id/tvPastelDeChoclo" />

    <EditText
        android:id="@+id/etCant2"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="6"
        android:hint="Cant2"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvCant2"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <EditText
        android:id="@+id/etVentaPastelDeChoclo"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Venta Pastel de Choclo"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etCant1"
        app:layout_constraintTop_toBottomOf="@+id/etCant1" />

    <EditText
        android:id="@+id/etVentaCazuela"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Venta Cazuela"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etCant2"
        app:layout_constraintTop_toBottomOf="@+id/etCant2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="98dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tvPastelDeChoclo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pastel_de_choclo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="87dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/cazuela" />


</androidx.constraintlayout.widget.ConstraintLayout>